--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorStatusBar">#03DAC5</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorText">#343434</color>
+    <color name="colorHint">#686868</color>
+    <color name="colorHighlight">#0EC2C2</color>
 </resources>
