--- a/app/src/main/res/values/font.xml
+++ b/app/src/main/res/values/font.xml
@@ -8,4 +8,5 @@
     <dimen name="font_22">22sp</dimen>
     <dimen name="font_24">24sp</dimen>
     <dimen name="font_30">30sp</dimen>
+    <dimen name="font_40">40sp</dimen>
 </resources>
