--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,61 @@
         <item name="android:textSize">@dimen/font_14</item>
     </style>
 
+    <style name="Button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:letterSpacing">0</item>
+        <!--        <item name="android:fontFamily">sans-serif</item>-->
+        <item name="android:textSize">@dimen/font_18</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:gravity">center</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:foreground">?selectableItemBackgroundBorderless</item>
+        <item name="android:paddingStart">@dimen/default_margin_8</item>
+        <item name="android:paddingEnd">@dimen/default_margin_8</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="ButtonOutlined" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:letterSpacing">0</item>
+        <!--        <item name="android:fontFamily">sans-serif</item>-->
+        <item name="android:textSize">@dimen/font_18</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:gravity">center</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:foreground">?selectableItemBackgroundBorderless</item>
+        <item name="android:paddingStart">@dimen/default_margin_8</item>
+        <item name="android:paddingEnd">@dimen/default_margin_8</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="strokeColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="TextInputLayoutOutlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">@color/colorHint</item>
+        <item name="boxStrokeColor">@color/colorPrimary</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="helperTextEnabled">true</item>
+        <item name="helperTextTextColor">@color/colorHint</item>
+        <item name="startIconTint">@color/colorHighlight</item>
+    </style>
+
+    <style name="EditTextOutlined" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/colorText</item>
+    </style>
+
+
     <style name="Text.Hint">
         <item name="android:textColor">@color/colorHint</item>
     </style>
@@ -61,6 +116,10 @@
 
     <style name="Text.White.22">
         <item name="android:textSize">@dimen/font_22</item>
+    </style>
+
+    <style name="Text.40">
+        <item name="android:textSize">@dimen/font_40</item>
     </style>
 
     <style name="AlertDialog.Theme" parent="ThemeOverlay.AppCompat.Dialog.Alert">
