--- a/app/src/main/res/layout/fragment_math.xml
+++ b/app/src/main/res/layout/fragment_math.xml
@@ -1,6 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingStart="@dimen/default_margin_24"
+    android:paddingEnd="@dimen/default_margin_24"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <TextView
+        android:id="@+id/tvFirstNumber"
+        style="@style/Text.40"
+        android:layout_marginTop="@dimen/default_margin_48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="20" />
+
+    <ImageView
+        android:id="@+id/ivPlus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_plus"
+        android:layout_marginStart="@dimen/default_margin_16"
+        app:layout_constraintStart_toEndOf="@id/tvFirstNumber"
+        app:layout_constraintTop_toTopOf="@id/tvFirstNumber"
+        app:layout_constraintEnd_toStartOf="@id/tvSecondNumber"
+        app:layout_constraintBottom_toBottomOf="@id/tvFirstNumber"/>
+
+    <TextView
+        android:id="@+id/tvSecondNumber"
+        style="@style/Text.40"
+        android:layout_marginStart="@dimen/default_margin_16"
+        app:layout_constraintEnd_toStartOf="@id/ivEquals"
+        app:layout_constraintStart_toEndOf="@id/ivPlus"
+        app:layout_constraintTop_toTopOf="@id/tvFirstNumber"
+        tools:text="20" />
+
+    <ImageView
+        android:id="@+id/ivEquals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_equals"
+        android:layout_marginStart="@dimen/default_margin_16"
+        android:layout_marginEnd="@dimen/default_margin_16"
+        app:layout_constraintStart_toEndOf="@id/tvSecondNumber"
+        app:layout_constraintTop_toTopOf="@id/tvFirstNumber"
+        app:layout_constraintBottom_toBottomOf="@id/tvFirstNumber"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilAnswer"
+        style="@style/TextInputLayoutOutlined"
+        android:layout_marginStart="@dimen/default_margin_16"
+        android:hint="Ответ"
+        app:layout_constraintStart_toEndOf="@id/ivEquals"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvFirstNumber"
+        app:layout_constraintBottom_toBottomOf="@id/tvFirstNumber">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etAnswer"
+            android:maxLength="4"
+            android:inputType="numberDecimal"
+            style="@style/EditTextOutlined" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btnAccept"
+        style="@style/Button"
+        android:text="@string/btn_ok"
+        android:layout_marginTop="@dimen/default_margin_16"
+        app:layout_constraintTop_toBottomOf="@id/tilAnswer"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
