--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="colorText">#343434</color>
     <color name="colorHint">#686868</color>
     <color name="colorHighlight">#0EC2C2</color>
+    <color name="colorSuccess">#FF43F602</color>
+    <color name="colorError">#FFE80532</color>
 </resources>
